--- a/seatunnel-connectors-v2/connector-jdbc/pom.xml
+++ b/seatunnel-connectors-v2/connector-jdbc/pom.xml
@@ -50,6 +50,7 @@
         <kingbase8.version>8.6.0</kingbase8.version>
         <hive.jdbc.version>3.1.3</hive.jdbc.version>
         <oceanbase.jdbc.version>2.4.3</oceanbase.jdbc.version>
+        <dolphindb.jdbc.version>2.00.11.0</dolphindb.jdbc.version>
     </properties>
 
     <dependencyManagement>
@@ -186,6 +187,12 @@
                 <groupId>com.oceanbase</groupId>
                 <artifactId>oceanbase-client</artifactId>
                 <version>${oceanbase.jdbc.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.dolphindb</groupId>
+                <artifactId>jdbc</artifactId>
+                <version>${dolphindb.jdbc.version}</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
